--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.16",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
