--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER="localhost:9999"
+# REACT_APP_SERVER="localhost:9999"
+REACT_APP_SERVER="https://concord-app-sincopeiro.herokuapp.com/"
