--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
