--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.0",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
